--- a/public/exemple/minlg.html
+++ b/public/exemple/minlg.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form action="../traite.php" method="post">
-        <input type="hidden" name="contrainte" value="prenom_minlg">
+        <input type="hidden" name="contrainte" value="prenom_Minlg">
         <label>min lg :
             <input type="text"  name="nombre">
         </label>
