Ajout form_Avant.html

--- a/public/exemple/form_Avant.html
+++ b/public/exemple/form_Avant.html
@@ -7,8 +7,8 @@
 <body>
     <form action="../traite.php" method="post">
         <input type="hidden" name="contrainte" value="Avant">
-        <label>Prénom :
-            <input type="text"  name="prenom">
+        <label>Date:
+            <input type="date"  name="date">
         </label>
         <input type="submit">
     </form>
