--- a/public/exemple/form_Avant.html
+++ b/public/exemple/form_Avant.html
@@ -7,7 +7,7 @@
 <body>
     <form action="../traite.php" method="post">
         <input type="hidden" name="contrainte" value="Avant">
-        <label>Date:
+        <label>Date a saisir:
             <input type="date"  name="date">
         </label>
         <input type="submit">
