--- a/public/exemple/form_Avant.html
+++ b/public/exemple/form_Avant.html
@@ -8,7 +8,7 @@
     <form action="../traite.php" method="post">
         <input type="hidden" name="contrainte" value="Avant">
         <label>Date a saisir:
-            <input type="date"  name="date">
+            <input type="text"  name="date">
         </label>
         <input type="submit">
     </form>
