Modif fichier html problème de casse

--- a/public/exemple/form_SuperieurA.html
+++ b/public/exemple/form_SuperieurA.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form action="../traite.php" method="post">
-        <input type="hidden" name="contrainte" value="Age_SuperieurA">
+        <input type="hidden" name="contrainte" value="age_SuperieurA">
         <label>Age :
             <input type="number"  name="age">
         </label>
