remplacement de tous les estVide par EstVide pour passer un test

--- a/public/exemple/form-estVide.html
+++ b/public/exemple/form-estVide.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <form action="../traite.php" method="post">
-        <input type="hidden" name="contrainte" value="estVide">
+        <input type="hidden" name="contrainte" value="EstVide">
         <label>entrez une chaine vide :
             <input type="text"  name="prenom">
         </label>
