correction du test

--- a/public/exemple/form_EstUneImage.html
+++ b/public/exemple/form_EstUneImage.html
@@ -9,7 +9,7 @@
     <input type="hidden" name="contrainte" value="Laetitia_EstUneImage">
     <form>
         <label>Pièce Jointe</label>
-        <input type="file" name="piece_jointe" />
+        <input type="file" name="piece_jointe" accept="image/png, image/jpeg">/>
         <button type="submit">Envoyer</button>
     </form>
     <input type="submit">
